modified_header/FreeImage.h


typedef int32_t BOOL;
typedef uint8_t BYTE;
typedef struct tagRGBQUAD {
  BYTE rgbBlue;
  BYTE rgbGreen;
  BYTE rgbRed;
  BYTE rgbReserved;
} RGBQUAD;
enum FREE_IMAGE_FORMAT {
	FIF_UNKNOWN = -1,
	FIF_BMP		= 0,
	FIF_ICO		= 1,
	FIF_JPEG	= 2,
	FIF_JNG		= 3,
	FIF_KOALA	= 4,
	FIF_LBM		= 5,
	FIF_IFF = FIF_LBM,
	FIF_MNG		= 6,
	FIF_PBM		= 7,
	FIF_PBMRAW	= 8,
	FIF_PCD		= 9,
	FIF_PCX		= 10,
	FIF_PGM		= 11,
	FIF_PGMRAW	= 12,
	FIF_PNG		= 13,
	FIF_PPM		= 14,
	FIF_PPMRAW	= 15,
	FIF_RAS		= 16,
	FIF_TARGA	= 17,
	FIF_TIFF	= 18,
	FIF_WBMP	= 19,
	FIF_PSD		= 20,
	FIF_CUT		= 21,
	FIF_XBM		= 22,
	FIF_XPM		= 23,
	FIF_DDS		= 24,
	FIF_GIF     = 25,
	FIF_HDR		= 26,
	FIF_FAXG3	= 27,
	FIF_SGI		= 28,
	FIF_EXR		= 29,
	FIF_J2K		= 30,
	FIF_JP2		= 31,
	FIF_PFM		= 32,
	FIF_PICT	= 33,
	FIF_RAW		= 34
};
enum FREE_IMAGE_TYPE {
	FIT_UNKNOWN = 0,	
	FIT_BITMAP  = 1,	
	FIT_UINT16	= 2,	
	FIT_INT16	= 3,	
	FIT_UINT32	= 4,	
	FIT_INT32	= 5,	
	FIT_FLOAT	= 6,	
	FIT_DOUBLE	= 7,	
	FIT_COMPLEX	= 8,	
	FIT_RGB16	= 9,	
	FIT_RGBA16	= 10,	
	FIT_RGBF	= 11,	
	FIT_RGBAF	= 12	
};
enum FREE_IMAGE_MDTYPE {
	FIDT_NOTYPE		= 0,	
	FIDT_BYTE		= 1,	
	FIDT_ASCII		= 2,	
	FIDT_SHORT		= 3,	
	FIDT_LONG		= 4,	
	FIDT_RATIONAL	= 5,	
	FIDT_SBYTE		= 6,	
	FIDT_UNDEFINED	= 7,	
	FIDT_SSHORT		= 8,	
	FIDT_SLONG		= 9,	
	FIDT_SRATIONAL	= 10,	
	FIDT_FLOAT		= 11,	
	FIDT_DOUBLE		= 12,	
	FIDT_IFD		= 13,	
	FIDT_PALETTE	= 14,	
	FIDT_LONG8		= 16,	
	FIDT_SLONG8		= 17,	
	FIDT_IFD8		= 18	
};
enum FREE_IMAGE_MDMODEL {
	FIMD_NODATA			= -1,
	FIMD_COMMENTS		= 0,	
	FIMD_EXIF_MAIN		= 1,	
	FIMD_EXIF_EXIF		= 2,	
	FIMD_EXIF_GPS		= 3,	
	FIMD_EXIF_MAKERNOTE = 4,	
	FIMD_EXIF_INTEROP	= 5,	
	FIMD_IPTC			= 6,	
	FIMD_XMP			= 7,	
	FIMD_GEOTIFF		= 8,	
	FIMD_ANIMATION		= 9,	
	FIMD_CUSTOM			= 10,	
	FIMD_EXIF_RAW		= 11	
};
#define FREEIMAGE_IO
typedef void* fi_handle;
typedef unsigned (DLL_CALLCONV *FI_ReadProc) (void *buffer, unsigned size, unsigned count, fi_handle handle);
typedef unsigned (DLL_CALLCONV *FI_WriteProc) (void *buffer, unsigned size, unsigned count, fi_handle handle);
typedef int (DLL_CALLCONV *FI_SeekProc) (fi_handle handle, long offset, int origin);
typedef long (DLL_CALLCONV *FI_TellProc) (fi_handle handle);
#define PLUGINS
typedef const char *(DLL_CALLCONV *FI_FormatProc)(void);
typedef const char *(DLL_CALLCONV *FI_DescriptionProc)(void);
typedef const char *(DLL_CALLCONV *FI_ExtensionListProc)(void);
typedef const char *(DLL_CALLCONV *FI_RegExprProc)(void);
typedef void *(DLL_CALLCONV *FI_OpenProc)(FreeImageIO *io, fi_handle handle, BOOL read);
typedef void (DLL_CALLCONV *FI_CloseProc)(FreeImageIO *io, fi_handle handle, void *data);
typedef int (DLL_CALLCONV *FI_PageCountProc)(FreeImageIO *io, fi_handle handle, void *data);
typedef int (DLL_CALLCONV *FI_PageCapabilityProc)(FreeImageIO *io, fi_handle handle, void *data);
typedef FIBITMAP *(DLL_CALLCONV *FI_LoadProc)(FreeImageIO *io, fi_handle handle, int page, int flags, void *data);
typedef BOOL (DLL_CALLCONV *FI_SaveProc)(FreeImageIO *io, FIBITMAP *dib, fi_handle handle, int page, int flags, void *data);
typedef BOOL (DLL_CALLCONV *FI_ValidateProc)(FreeImageIO *io, fi_handle handle);
typedef const char *(DLL_CALLCONV *FI_MimeProc)(void);
typedef BOOL (DLL_CALLCONV *FI_SupportsExportBPPProc)(int bpp);
typedef BOOL (DLL_CALLCONV *FI_SupportsExportTypeProc)(FREE_IMAGE_TYPE type);
typedef BOOL (DLL_CALLCONV *FI_SupportsICCProfilesProc)(void);
typedef BOOL (DLL_CALLCONV *FI_SupportsNoPixelsProc)(void);
typedef void (DLL_CALLCONV *FI_InitProc)(Plugin *plugin, int format_id);
#define FIF_LOAD_NOPIXELS 0x8000 
#define BMP_DEFAULT         0
#define BMP_SAVE_RLE        1
#define CUT_DEFAULT         0
#define DDS_DEFAULT			0
#define EXR_DEFAULT			0		
#define EXR_FLOAT			0x0001	
#define EXR_NONE			0x0002	
#define EXR_ZIP				0x0004	
#define EXR_PIZ				0x0008	
#define EXR_PXR24			0x0010	
#define EXR_B44				0x0020	
#define EXR_LC				0x0040	
#define FAXG3_DEFAULT		0
#define GIF_DEFAULT			0
#define GIF_LOAD256			1		
#define GIF_PLAYBACK		2		
#define HDR_DEFAULT			0
#define ICO_DEFAULT         0
#define ICO_MAKEALPHA		1		
#define IFF_DEFAULT         0
#define J2K_DEFAULT			0		
#define JP2_DEFAULT			0		
#define JPEG_DEFAULT        0		
#define JPEG_FAST           0x0001	
#define JPEG_ACCURATE       0x0002	
#define JPEG_CMYK			0x0004	
#define JPEG_EXIFROTATE		0x0008	
#define JPEG_GREYSCALE		0x0010	
#define JPEG_QUALITYSUPERB  0x80	
#define JPEG_QUALITYGOOD    0x0100	
#define JPEG_QUALITYNORMAL  0x0200	
#define JPEG_QUALITYAVERAGE 0x0400	
#define JPEG_QUALITYBAD     0x0800	
#define JPEG_PROGRESSIVE	0x2000	
#define JPEG_SUBSAMPLING_411 0x1000		
#define JPEG_SUBSAMPLING_420 0x4000		
#define JPEG_SUBSAMPLING_422 0x8000		
#define JPEG_SUBSAMPLING_444 0x10000	
#define JPEG_OPTIMIZE		0x20000		
#define JPEG_BASELINE		0x40000		
#define KOALA_DEFAULT       0
#define LBM_DEFAULT         0
#define MNG_DEFAULT         0
#define PCD_DEFAULT         0
#define PCD_BASE            1		
#define PCD_BASEDIV4        2		
#define PCD_BASEDIV16       3		
#define PCX_DEFAULT         0
#define PFM_DEFAULT         0
#define PICT_DEFAULT        0
#define PNG_DEFAULT         0
#define PNG_IGNOREGAMMA		1		
#define PNG_Z_BEST_SPEED			0x0001	
#define PNG_Z_DEFAULT_COMPRESSION	0x0006	
#define PNG_Z_BEST_COMPRESSION		0x0009	
#define PNG_Z_NO_COMPRESSION		0x0100	
#define PNG_INTERLACED				0x0200	
#define PNM_DEFAULT         0
#define PNM_SAVE_RAW        0       
#define PNM_SAVE_ASCII      1       
#define PSD_DEFAULT         0
#define PSD_CMYK			1		
#define PSD_LAB				2		
#define RAS_DEFAULT         0
#define RAW_DEFAULT         0		
#define RAW_PREVIEW			1		
#define RAW_DISPLAY			2		
#define RAW_HALFSIZE		4		
#define SGI_DEFAULT			0
#define TARGA_DEFAULT       0
#define TARGA_LOAD_RGB888   1       
#define TARGA_SAVE_RLE		2		
#define TIFF_DEFAULT        0
#define TIFF_CMYK			0x0001	
#define TIFF_PACKBITS       0x0100  
#define TIFF_DEFLATE        0x0200  
#define TIFF_ADOBE_DEFLATE  0x0400  
#define TIFF_NONE           0x0800  
#define TIFF_CCITTFAX3		0x1000  
#define TIFF_CCITTFAX4		0x2000  
#define TIFF_LZW			0x4000	
#define TIFF_JPEG			0x8000	
#define TIFF_LOGLUV			0x10000	
#define WBMP_DEFAULT        0
#define XBM_DEFAULT			0
#define XPM_DEFAULT			0
#define FI_COLOR_IS_RGB_COLOR			0x00	
#define FI_COLOR_IS_RGBA_COLOR			0x01	
#define FI_COLOR_FIND_EQUAL_COLOR		0x02	
#define FI_COLOR_ALPHA_IS_INDEX			0x04	
#define FI_COLOR_PALETTE_SEARCH_MASK	(FI_COLOR_FIND_EQUAL_COLOR | FI_COLOR_ALPHA_IS_INDEX)	
DLL_API void DLL_CALLCONV FreeImage_Initialise(BOOL load_local_plugins_only FI_DEFAULT(FALSE));
DLL_API void DLL_CALLCONV FreeImage_DeInitialise(void);
DLL_API const char *DLL_CALLCONV FreeImage_GetVersion(void);
DLL_API const char *DLL_CALLCONV FreeImage_GetCopyrightMessage(void);
typedef void (*FreeImage_OutputMessageFunction)(FREE_IMAGE_FORMAT fif, const char *msg);
typedef void (DLL_CALLCONV *FreeImage_OutputMessageFunctionStdCall)(FREE_IMAGE_FORMAT fif, const char *msg);
DLL_API void DLL_CALLCONV FreeImage_SetOutputMessageStdCall(FreeImage_OutputMessageFunctionStdCall omf);
DLL_API void DLL_CALLCONV FreeImage_SetOutputMessage(FreeImage_OutputMessageFunction omf);
DLL_API void DLL_CALLCONV FreeImage_OutputMessageProc(int fif, const char *fmt, ...);
DLL_API FIBITMAP *DLL_CALLCONV FreeImage_Allocate(int width, int height, int bpp, unsigned red_mask FI_DEFAULT(0), unsigned green_mask FI_DEFAULT(0), unsigned blue_mask FI_DEFAULT(0));
DLL_API FIBITMAP *DLL_CALLCONV FreeImage_AllocateT(FREE_IMAGE_TYPE type, int width, int height, int bpp FI_DEFAULT(8), unsigned red_mask FI_DEFAULT(0), unsigned green_mask FI_DEFAULT(0), unsigned blue_mask FI_DEFAULT(0));
DLL_API FIBITMAP * DLL_CALLCONV FreeImage_Clone(FIBITMAP *dib);
DLL_API void DLL_CALLCONV FreeImage_Unload(FIBITMAP *dib);
DLL_API BOOL DLL_CALLCONV FreeImage_HasPixels(FIBITMAP *dib);
DLL_API FIBITMAP *DLL_CALLCONV FreeImage_Load(FREE_IMAGE_FORMAT fif, const char *filename, int flags FI_DEFAULT(0));
DLL_API FIBITMAP *DLL_CALLCONV FreeImage_LoadU(FREE_IMAGE_FORMAT fif, const wchar_t *filename, int flags FI_DEFAULT(0));
DLL_API FIBITMAP *DLL_CALLCONV FreeImage_LoadFromHandle(FREE_IMAGE_FORMAT fif, FreeImageIO *io, fi_handle handle, int flags FI_DEFAULT(0));
DLL_API BOOL DLL_CALLCONV FreeImage_Save(FREE_IMAGE_FORMAT fif, FIBITMAP *dib, const char *filename, int flags FI_DEFAULT(0));
DLL_API BOOL DLL_CALLCONV FreeImage_SaveU(FREE_IMAGE_FORMAT fif, FIBITMAP *dib, const wchar_t *filename, int flags FI_DEFAULT(0));
DLL_API BOOL DLL_CALLCONV FreeImage_SaveToHandle(FREE_IMAGE_FORMAT fif, FIBITMAP *dib, FreeImageIO *io, fi_handle handle, int flags FI_DEFAULT(0));
DLL_API BOOL DLL_CALLCONV FreeImage_FillBackground(FIBITMAP *dib, const void *color, int options FI_DEFAULT(0));
DLL_API FIBITMAP *DLL_CALLCONV FreeImage_EnlargeCanvas(FIBITMAP *src, int left, int top, int right, int bottom, const void *color, int options FI_DEFAULT(0));