freeimage.nim


type 
  FREE_IMAGE_MDTYPE* = enum 
    FIDT_NOTYPE = 0,          # placeholder 
    FIDT_BYTE = 1,            # 8-bit unsigned integer 
    FIDT_ASCII = 2,           # 8-bit bytes w/ last byte null 
    FIDT_SHORT = 3,           # 16-bit unsigned integer 
    FIDT_LONG = 4,            # 32-bit unsigned integer 
    FIDT_RATIONAL = 5,        # 64-bit unsigned fraction 
    FIDT_SBYTE = 6,           # 8-bit signed integer 
    FIDT_UNDEFINED = 7,       # 8-bit untyped data 
    FIDT_SSHORT = 8,          # 16-bit signed integer 
    FIDT_SLONG = 9,           # 32-bit signed integer 
    FIDT_SRATIONAL = 10,      # 64-bit signed fraction 
    FIDT_FLOAT = 11,          # 32-bit IEEE floating point 
    FIDT_DOUBLE = 12,         # 64-bit IEEE floating point 
    FIDT_IFD = 13,            # 32-bit unsigned integer (offset) 
    FIDT_PALETTE = 14,        # 32-bit RGBQUAD 
    FIDT_LONG8 = 16,          # 64-bit unsigned integer 
    FIDT_SLONG8 = 17,         # 64-bit signed integer
    FIDT_IFD8 = 18

#*
#  Metadata models supported by FreeImage
#

type 
  FREE_IMAGE_MDMODEL* = enum 
    FIMD_NODATA = - 1, FIMD_COMMENTS = 0, # single comment or keywords
    FIMD_EXIF_MAIN = 1,       # Exif-TIFF metadata
    FIMD_EXIF_EXIF = 2,       # Exif-specific metadata
    FIMD_EXIF_GPS = 3,        # Exif GPS metadata
    FIMD_EXIF_MAKERNOTE = 4,  # Exif maker note metadata
    FIMD_EXIF_INTEROP = 5,    # Exif interoperability metadata
    FIMD_IPTC = 6,            # IPTC/NAA metadata
    FIMD_XMP = 7,             # Abobe XMP metadata
    FIMD_GEOTIFF = 8,         # GeoTIFF metadata
    FIMD_ANIMATION = 9,       # Animation metadata
    FIMD_CUSTOM = 10,         # Used to attach other metadata types to a dib
    FIMD_EXIF_RAW = 11

#*
#  Handle to a metadata model
#

type 
  FIMETADATA* = object 
    data*: pointer


#*
#  Handle to a FreeImage tag
#

type 
  FITAG* = object 
    data*: pointer


# File IO routines ---------------------------------------------------------

when not(defined(FREEIMAGE_IO)): 
  const 
    cFREEIMAGE_IO* = true
  type 
    fi_handle* = pointer
    FI_ReadProc* = proc (buffer: pointer; size: cuint; count: cuint; 
                         handle: fi_handle): cuint {.FreeImageCallconv.}
    FI_WriteProc* = proc (buffer: pointer; size: cuint; count: cuint; 
                          handle: fi_handle): cuint {.FreeImageCallconv.}
    FI_SeekProc* = proc (handle: fi_handle; offset: clong; origin: cint): cint {.FreeImageCallconv.}
    FI_TellProc* = proc (handle: fi_handle): clong {.FreeImageCallconv.}
  type 
    FreeImageIO* = object 
      read_proc*: FI_ReadProc # pointer to the function used to read data
      write_proc*: FI_WriteProc # pointer to the function used to write data
      seek_proc*: FI_SeekProc # pointer to the function used to seek
      tell_proc*: FI_TellProc # pointer to the function used to aquire the current position
    
  #*
  #Handle to a memory I/O stream
  #
  type 
    FIMEMORY* = object 
      data*: pointer

# Plugin routines ----------------------------------------------------------

when not(defined(PLUGINS)): 
  const 
    PLUGINS* = true
  type 
    FI_FormatProc* = proc (): cstring
    FI_DescriptionProc* = proc (): cstring
    FI_ExtensionListProc* = proc (): cstring
    FI_RegExprProc* = proc (): cstring
    FI_OpenProc* = proc (io: ptr FreeImageIO; handle: fi_handle; read: BOOL): pointer
    FI_CloseProc* = proc (io: ptr FreeImageIO; handle: fi_handle; data: pointer)
    FI_PageCountProc* = proc (io: ptr FreeImageIO; handle: fi_handle; 
                              data: pointer): cint
    FI_PageCapabilityProc* = proc (io: ptr FreeImageIO; handle: fi_handle; 
                                   data: pointer): cint
    FI_LoadProc* = proc (io: ptr FreeImageIO; handle: fi_handle; page: cint; 
                         flags: cint; data: pointer): ptr FIBITMAP
    FI_SaveProc* = proc (io: ptr FreeImageIO; dib: ptr FIBITMAP; 
                         handle: fi_handle; page: cint; flags: cint; 
                         data: pointer): BOOL
    FI_ValidateProc* = proc (io: ptr FreeImageIO; handle: fi_handle): BOOL
    FI_MimeProc* = proc (): cstring
    FI_SupportsExportBPPProc* = proc (bpp: cint): BOOL
    FI_SupportsExportTypeProc* = proc (typen: FREE_IMAGE_TYPE): BOOL
    FI_SupportsICCProfilesProc* = proc (): BOOL
    FI_SupportsNoPixelsProc* = proc (): BOOL
    Plugin* = object 
      format_proc*: FI_FormatProc
      description_proc*: FI_DescriptionProc
      extension_proc*: FI_ExtensionListProc
      regexpr_proc*: FI_RegExprProc
      open_proc*: FI_OpenProc
      close_proc*: FI_CloseProc
      pagecount_proc*: FI_PageCountProc
      pagecapability_proc*: FI_PageCapabilityProc
      load_proc*: FI_LoadProc
      save_proc*: FI_SaveProc
      validate_proc*: FI_ValidateProc
      mime_proc*: FI_MimeProc
      supports_export_bpp_proc*: FI_SupportsExportBPPProc
      supports_export_type_proc*: FI_SupportsExportTypeProc
      supports_icc_profiles_proc*: FI_SupportsICCProfilesProc
      supports_no_pixels_proc*: FI_SupportsNoPixelsProc

    FI_InitProc* = proc (plugin: ptr Plugin; format_id: cint)
# Load / Save flag constants -----------------------------------------------

const 
  FIF_LOAD_NOPIXELS* = 0x00008000
  BMP_DEFAULT* = 0
  BMP_SAVE_RLE* = 1
  CUT_DEFAULT* = 0
  DDS_DEFAULT* = 0
  EXR_DEFAULT* = 0
  EXR_FLOAT* = 0x00000001
  EXR_NONE* = 0x00000002
  EXR_ZIP* = 0x00000004
  EXR_PIZ* = 0x00000008
  EXR_PXR24* = 0x00000010
  EXR_B44* = 0x00000020
  EXR_LC* = 0x00000040
  FAXG3_DEFAULT* = 0
  GIF_DEFAULT* = 0
  GIF_LOAD256* = 1
  GIF_PLAYBACK* = 2
  HDR_DEFAULT* = 0
  ICO_DEFAULT* = 0
  ICO_MAKEALPHA* = 1
  IFF_DEFAULT* = 0
  J2K_DEFAULT* = 0
  JP2_DEFAULT* = 0
  JPEG_DEFAULT* = 0
  JPEG_FAST* = 0x00000001
  JPEG_ACCURATE* = 0x00000002
  JPEG_CMYK* = 0x00000004
  JPEG_EXIFROTATE* = 0x00000008
  JPEG_GREYSCALE* = 0x00000010
  JPEG_QUALITYSUPERB* = 0x00000080
  JPEG_QUALITYGOOD* = 0x00000100
  JPEG_QUALITYNORMAL* = 0x00000200
  JPEG_QUALITYAVERAGE* = 0x00000400
  JPEG_QUALITYBAD* = 0x00000800
  JPEG_PROGRESSIVE* = 0x00002000
  JPEG_SUBSAMPLING_411* = 0x00001000
  JPEG_SUBSAMPLING_420* = 0x00004000
  JPEG_SUBSAMPLING_422* = 0x00008000
  JPEG_SUBSAMPLING_444* = 0x00010000
  JPEG_OPTIMIZE* = 0x00020000
  JPEG_BASELINE* = 0x00040000
  KOALA_DEFAULT* = 0
  LBM_DEFAULT* = 0
  MNG_DEFAULT* = 0
  PCD_DEFAULT* = 0
  PCD_BASE* = 1
  PCD_BASEDIV4* = 2
  PCD_BASEDIV16* = 3
  PCX_DEFAULT* = 0
  PFM_DEFAULT* = 0
  PICT_DEFAULT* = 0
  PNG_DEFAULT* = 0
  PNG_IGNOREGAMMA* = 1
  PNG_Z_BEST_SPEED* = 0x00000001
  PNG_Z_DEFAULT_COMPRESSION* = 0x00000006
  PNG_Z_BEST_COMPRESSION* = 0x00000009
  PNG_Z_NO_COMPRESSION* = 0x00000100
  PNG_INTERLACED* = 0x00000200
  PNM_DEFAULT* = 0
  PNM_SAVE_RAW* = 0
  PNM_SAVE_ASCII* = 1
  PSD_DEFAULT* = 0
  PSD_CMYK* = 1
  PSD_LAB* = 2
  RAS_DEFAULT* = 0
  RAW_DEFAULT* = 0
  RAW_PREVIEW* = 1
  RAW_DISPLAY* = 2
  RAW_HALFSIZE* = 4
  SGI_DEFAULT* = 0
  TARGA_DEFAULT* = 0
  TARGA_LOAD_RGB888* = 1
  TARGA_SAVE_RLE* = 2
  TIFF_DEFAULT* = 0
  TIFF_CMYK* = 0x00000001
  TIFF_PACKBITS* = 0x00000100
  TIFF_DEFLATE* = 0x00000200
  TIFF_ADOBE_DEFLATE* = 0x00000400
  TIFF_NONE* = 0x00000800
  TIFF_CCITTFAX3* = 0x00001000
  TIFF_CCITTFAX4* = 0x00002000
  TIFF_LZW* = 0x00004000
  TIFF_JPEG* = 0x00008000
  TIFF_LOGLUV* = 0x00010000
  WBMP_DEFAULT* = 0
  XBM_DEFAULT* = 0
  XPM_DEFAULT* = 0

# Background filling options ---------------------------------------------------------
# Constants used in FreeImage_FillBackground and FreeImage_EnlargeCanvas

const 
  FI_COLOR_IS_RGB_COLOR* = 0x00000000
  FI_COLOR_IS_RGBA_COLOR* = 0x00000001
  FI_COLOR_FIND_EQUAL_COLOR* = 0x00000002
  FI_COLOR_ALPHA_IS_INDEX* = 0x00000004
  FI_COLOR_PALETTE_SEARCH_MASK* = (
    FI_COLOR_FIND_EQUAL_COLOR or FI_COLOR_ALPHA_IS_INDEX) # No color lookup is performed

when defined(windows):
  {.push callconv: stdcall.}
else:
  {.push callconv: cdecl.}
# Init / Error routines ----------------------------------------------------

proc FreeImage_Initialise*(load_local_plugins_only: BOOL) {.
    importc: "FreeImage_Initialise", dynlib: FreeImageLib.}
proc FreeImage_DeInitialise*() {.importc: "FreeImage_DeInitialise", 
                                 dynlib: FreeImageLib.}
# Version routines ---------------------------------------------------------

proc FreeImage_GetVersion*(): cstring {.importc: "FreeImage_GetVersion", 
                                        dynlib: FreeImageLib.}
proc FreeImage_GetCopyrightMessage*(): cstring {.
    importc: "FreeImage_GetCopyrightMessage", dynlib: FreeImageLib.}
# Message output functions -------------------------------------------------

type 
  FreeImage_OutputMessageFunction* = proc (fif: FREE_IMAGE_FORMAT; msg: cstring)
  FreeImage_OutputMessageFunctionStdCall* = proc (fif: FREE_IMAGE_FORMAT; 
      msg: cstring)

proc FreeImage_SetOutputMessageStdCall*(omf: FreeImage_OutputMessageFunctionStdCall) {.
    importc: "FreeImage_SetOutputMessageStdCall", dynlib: FreeImageLib.}
proc FreeImage_SetOutputMessage*(omf: FreeImage_OutputMessageFunction) {.
    importc: "FreeImage_SetOutputMessage", dynlib: FreeImageLib.}
proc FreeImage_OutputMessageProc*(fif: cint; fmt: cstring) {.varargs, 
    importc: "FreeImage_OutputMessageProc", dynlib: FreeImageLib.}
# Allocate / Clone / Unload routines ---------------------------------------

proc FreeImage_Allocate*(width: cint; height: cint; bpp: cint; red_mask: cuint; 
                         green_mask: cuint; blue_mask: cuint): ptr FIBITMAP {.
    importc: "FreeImage_Allocate", dynlib: FreeImageLib.}
proc FreeImage_AllocateT*(typen: FREE_IMAGE_TYPE; width: cint; height: cint; 
                          bpp: cint; red_mask: cuint; green_mask: cuint; 
                          blue_mask: cuint): ptr FIBITMAP {.
    importc: "FreeImage_AllocateT", dynlib: FreeImageLib.}
proc FreeImage_Clone*(dib: ptr FIBITMAP): ptr FIBITMAP {.
    importc: "FreeImage_Clone", dynlib: FreeImageLib.}
proc FreeImage_Unload*(dib: ptr FIBITMAP) {.importc: "FreeImage_Unload", 
    dynlib: FreeImageLib.}
# Header loading routines

proc FreeImage_HasPixels*(dib: ptr FIBITMAP): BOOL {.
    importc: "FreeImage_HasPixels", dynlib: FreeImageLib.}
# Load / Save routines -----------------------------------------------------

proc FreeImage_Load*(fif: FREE_IMAGE_FORMAT; filename: cstring; flags: cint): ptr FIBITMAP {.
    importc: "FreeImage_Load", dynlib: FreeImageLib.}
proc FreeImage_LoadU*(fif: FREE_IMAGE_FORMAT; filename: ptr uint16; flags: cint): ptr FIBITMAP {.
    importc: "FreeImage_LoadU", dynlib: FreeImageLib.}
proc FreeImage_LoadFromHandle*(fif: FREE_IMAGE_FORMAT; io: ptr FreeImageIO; 
                               handle: fi_handle; flags: cint): ptr FIBITMAP {.
    importc: "FreeImage_LoadFromHandle", dynlib: FreeImageLib.}
proc FreeImage_Save*(fif: FREE_IMAGE_FORMAT; dib: ptr FIBITMAP; 
                     filename: cstring; flags: cint): BOOL {.
    importc: "FreeImage_Save", dynlib: FreeImageLib.}
proc FreeImage_SaveU*(fif: FREE_IMAGE_FORMAT; dib: ptr FIBITMAP; 
                      filename: ptr uint16; flags: cint): BOOL {.
    importc: "FreeImage_SaveU", dynlib: FreeImageLib.}
proc FreeImage_SaveToHandle*(fif: FREE_IMAGE_FORMAT; dib: ptr FIBITMAP; 
                             io: ptr FreeImageIO; handle: fi_handle; flags: cint): BOOL {.
    importc: "FreeImage_SaveToHandle", dynlib: FreeImageLib.}
# Memory I/O stream routines -----------------------------------------------
